...
    <string name="add">Add</string>
    <string name="all_habits">All Habits</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="done">Done</string>
    <string name="habit_name">Habit Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="what_type_of_habit">What type of Habit?</string>
    <string name="good_habit">Good Habit</string>
    <string name="bad_habit">Bad Habit</string>
    <string name="assign_a_message">Assign a message</string>
...
